force-app/main/default/objects/QuoteLineItem/fields/AppliedCoffeeSurcharge__c.field-meta.xml
<CustomField>
    <fullName>AppliedCoffeeSurcharge__c</fullName>
    <label>Applied Coffee Surcharge</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>