force-app/main/default/objects/QuoteLineItem/fields/AppliedMachineSurcharge__c.field-meta.xml
<CustomField>
    <fullName>AppliedMachineSurcharge__c</fullName>
    <label>Applied Machine Surcharge</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>