force-app/main/default/objects/QuoteLineItem/fields/CreateAConditionsSheet__c.field-meta.xml
<CustomField>
    <fullName>CreateAConditionsSheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create a Conditions Sheet</label>
    <type>Checkbox</type>
</CustomField>