force-app/main/default/objects/QuoteLineItem/fields/CustomListPrice__c.field-meta.xml
<CustomField>
    <fullName>CustomListPrice__c</fullName>
    <label>Custom List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>