force-app/main/default/objects/QuoteLineItem/fields/CustomTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>CustomTotalPrice__c</fullName>
    <label>Custom Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>