force-app/main/default/objects/QuoteLineItem/fields/DiscountInPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountInPercent__c</fullName>
    <label>Discount (in %)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>