force-app/main/default/objects/QuoteLineItem/fields/IsComponent__c.field-meta.xml
<CustomField>
    <fullName>IsComponent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Component?</label>
    <type>Checkbox</type>
</CustomField>