force-app/main/default/objects/QuoteLineItem/fields/IsMachine1Discount__c.field-meta.xml
<CustomField>
    <fullName>IsMachine1Discount__c</fullName>
    <formula>(  SpecialDiscount__c = 0 || SpecialDiscount__c = null ) &amp;&amp; ( ISPICKVAL ( MachineType__c , &quot;Machine&quot; ) || ISPICKVAL ( MachineType__c , &quot;Accessoire&quot; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Machine 1 Discount</label>
    <type>Checkbox</type>
</CustomField>