force-app/main/default/objects/QuoteLineItem/fields/IsMachine2Discounts__c.field-meta.xml
<CustomField>
    <fullName>IsMachine2Discounts__c</fullName>
    <formula>SpecialDiscount__c &gt; 0 &amp;&amp; ( ISPICKVAL ( MachineType__c , &quot;Machine&quot; ) || ISPICKVAL ( MachineType__c , &quot;Accessoire&quot; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Machine 2 Discounts</label>
    <type>Checkbox</type>
</CustomField>