force-app/main/default/objects/QuoteLineItem/fields/IsSpecialMachine1Discount__c.field-meta.xml
<CustomField>
    <fullName>IsSpecialMachine1Discount__c</fullName>
    <formula>( SpecialDiscount__c = 0 || SpecialDiscount__c = null ) &amp;&amp;  ISPICKVAL ( MachineType__c , &quot;Special Machine&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Special Machine 1 Discount</label>
    <type>Checkbox</type>
</CustomField>