force-app/main/default/objects/QuoteLineItem/fields/IsSpecialMachine2Discounts__c.field-meta.xml
<CustomField>
    <fullName>IsSpecialMachine2Discounts__c</fullName>
    <formula>SpecialDiscount__c &gt; 0 &amp;&amp;  ISPICKVAL ( MachineType__c , &quot;Special Machine&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Special Machine 2 Discounts</label>
    <type>Checkbox</type>
</CustomField>