force-app/main/default/objects/QuoteLineItem/fields/IsSubgroup__c.field-meta.xml
<CustomField>
    <fullName>IsSubgroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Subgroup</label>
    <type>Checkbox</type>
</CustomField>