force-app/main/default/objects/QuoteLineItem/fields/LineItemName__c.field-meta.xml
<CustomField>
    <fullName>LineItemName__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Product2.QuoteName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Name</label>
    <type>Text</type>
</CustomField>