force-app/main/default/objects/QuoteLineItem/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <inlineHelpText>Speziell für Sondermaschinen bei Maschinenageboten!</inlineHelpText>
    <label>List Price (c)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>