force-app/main/default/objects/QuoteLineItem/fields/LowestConditionForSalesAreaManager__c.field-meta.xml
<CustomField>
    <fullName>LowestConditionForSalesAreaManager__c</fullName>
    <formula>Product2.LowestConditionForSalesAreaManager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lowest Condition for Sales Area Manager</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>