force-app/main/default/objects/QuoteLineItem/fields/MachineDescription__c.field-meta.xml
<CustomField>
    <fullName>MachineDescription__c</fullName>
    <description>JJDSF-23</description>
    <label>Machine Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>