force-app/main/default/objects/QuoteLineItem/fields/MachineType__c.field-meta.xml
<CustomField>
    <fullName>MachineType__c</fullName>
    <label>Machine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Machine</fullName>
            </value>
            <value>
                <fullName>Accessoire</fullName>
            </value>
            <value>
                <fullName>Special Machine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>