force-app/main/default/objects/QuoteLineItem/fields/MinimumPrice__c.field-meta.xml
<CustomField>
    <fullName>MinimumPrice__c</fullName>
    <formula>Product2.MinimumPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>