force-app/main/default/objects/QuoteLineItem/fields/NotDiscountable__c.field-meta.xml
<CustomField>
    <fullName>NotDiscountable__c</fullName>
    <formula>Product2.NotDiscountable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Discountable</label>
    <type>Checkbox</type>
</CustomField>