force-app/main/default/objects/QuoteLineItem/fields/OfferPositionName__c.field-meta.xml
<CustomField>
    <fullName>OfferPositionName__c</fullName>
    <description>JJDSF-23</description>
    <label>Offer Position Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>