force-app/main/default/objects/QuoteLineItem/fields/ParentMachine__c.field-meta.xml
<CustomField>
    <fullName>ParentMachine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JJDSF-172</description>
    <label>Parent Machine</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItemsParentMachine</relationshipName>
    <type>Lookup</type>
</CustomField>