force-app/main/default/objects/QuoteLineItem/fields/ParentMachineQL__c.field-meta.xml
<CustomField>
    <fullName>ParentMachineQL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentMachineQL</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>