force-app/main/default/objects/QuoteLineItem/fields/PriceWarning__c.field-meta.xml
<CustomField>
    <fullName>PriceWarning__c</fullName>
    <formula>CASE( TEXT( ApprovalLevel__c ),
&quot;VL&quot; , IMAGE(&apos;/resource/price_warning_gl&apos;,&quot;GL&quot;, 25,50),
&quot;NVL&quot;, IMAGE(&apos;/resource/price_warning_vl&apos;,&quot;VL&quot;, 25,50)
, &quot;&quot;
)</formula>
    <label>Price Warning</label>
    <type>Text</type>
</CustomField>