force-app/main/default/objects/QuoteLineItem/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Product2.Id,  Product2.ProductCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>