force-app/main/default/objects/QuoteLineItem/fields/ProductCodeAndProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeAndProductName__c</fullName>
    <formula>Product2.ProductCode &amp; &quot; | &quot; &amp; Product2.Name</formula>
    <label>Product Code and Product Name</label>
    <type>Text</type>
</CustomField>