force-app/main/default/objects/QuoteLineItem/fields/ProductSubgroup__c.field-meta.xml
<CustomField>
    <fullName>ProductSubgroup__c</fullName>
    <label>Product Subgroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>