force-app/main/default/objects/QuoteLineItem/fields/RefundCoffee__c.field-meta.xml
<CustomField>
    <fullName>RefundCoffee__c</fullName>
    <formula>ProductGroup__c = &quot;Röstkaffee&quot;

&amp;&amp;

( RefundDiscountInEuro__c&gt; 0 ||
RefundDiscountInPercent__c&gt; 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Coffee</label>
    <type>Checkbox</type>
</CustomField>