force-app/main/default/objects/QuoteLineItem/fields/RefundDiscountInEuro__c.field-meta.xml
<CustomField>
    <fullName>RefundDiscountInEuro__c</fullName>
    <label>Refund - Discount (in €)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>