force-app/main/default/objects/QuoteLineItem/fields/RefundDiscountInPercent__c.field-meta.xml
<CustomField>
    <fullName>RefundDiscountInPercent__c</fullName>
    <label>Refund - Discount (in %)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>