force-app/main/default/objects/QuoteLineItem/fields/RefundDrinkingChocolate__c.field-meta.xml
<CustomField>
    <fullName>RefundDrinkingChocolate__c</fullName>
    <formula>ProductGroup__c = &quot;Trinkschokolade&quot; 

&amp;&amp;

( RefundDiscountInEuro__c&gt; 0 ||
RefundDiscountInPercent__c&gt; 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund - Drinking chocolate</label>
    <type>Checkbox</type>
</CustomField>