force-app/main/default/objects/QuoteLineItem/fields/RefundInEuroBlankIfZero__c.field-meta.xml
<CustomField>
    <fullName>RefundInEuroBlankIfZero__c</fullName>
    <formula>IF ( UnitPrice = 0 , &quot;&quot; , &quot;€&quot;&amp;text(floor(RefundDiscountInEuro__c)) &amp;&quot;.&quot;&amp; lpad(text((RefundDiscountInEuro__c-floor(RefundDiscountInEuro__c))*100),2,&quot;0&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund in Euro / Blank if zero</label>
    <type>Text</type>
</CustomField>