force-app/main/default/objects/QuoteLineItem/fields/RefundInPercentBlankIfZero__c.field-meta.xml
<CustomField>
    <fullName>RefundInPercentBlankIfZero__c</fullName>
    <formula>IF ( UnitPrice = 0 , &quot;&quot; , text(floor(RefundDiscountInPercent__c)) &amp;&quot;.&quot;&amp; lpad(text((RefundDiscountInPercent__c-floor(RefundDiscountInPercent__c))*100),2,&quot;0&quot;)&amp;&quot;%&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund in Percent / Blank if zero</label>
    <type>Text</type>
</CustomField>