force-app/main/default/objects/QuoteLineItem/fields/RefundMiscellaneous__c.field-meta.xml
<CustomField>
    <fullName>RefundMiscellaneous__c</fullName>
    <formula>ProductGroup__c = &quot;Sonstige&quot;

&amp;&amp;

( RefundDiscountInEuro__c&gt; 0 ||
RefundDiscountInPercent__c&gt; 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund - Miscellaneous</label>
    <type>Checkbox</type>
</CustomField>