force-app/main/default/objects/QuoteLineItem/fields/RefundTea__c.field-meta.xml
<CustomField>
    <fullName>RefundTea__c</fullName>
    <formula>ProductGroup__c = &quot;Tee&quot;

&amp;&amp;

( RefundDiscountInEuro__c&gt; 0 ||
RefundDiscountInPercent__c&gt; 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund - Tea</label>
    <type>Checkbox</type>
</CustomField>