force-app/main/default/objects/QuoteLineItem/fields/SpecialDiscount__c.field-meta.xml
<CustomField>
    <fullName>SpecialDiscount__c</fullName>
    <label>Special Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>