force-app/main/default/objects/QuoteLineItem/fields/SpecialDiscountInPercent__c.field-meta.xml
<CustomField>
    <fullName>SpecialDiscountInPercent__c</fullName>
    <label>Special Discount (in %)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>