force-app/main/default/objects/QuoteLineItem/fields/SpecialMachinePurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>SpecialMachinePurchasePrice__c</fullName>
    <label>Special Machine Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>