force-app/main/default/objects/QuoteLineItem/fields/TotalSurcharge__c.field-meta.xml
<CustomField>
    <fullName>TotalSurcharge__c</fullName>
    <formula>AppliedMachineSurcharge__c +  AppliedCoffeeSurcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>