force-app/main/default/objects/QuoteLineItem/fields/UnitPriceBlankIfZero__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceBlankIfZero__c</fullName>
    <formula>/*IF(
UnitPrice = 0,
&quot;&quot;,
TEXT(FLOOR(UnitPrice)) &amp;
&quot;,&quot; &amp;
LPAD(TEXT(ROUND( (UnitPrice - FLOOR(UnitPrice)) * 100 , 0)), 2, &quot;0&quot;) &amp;
&quot; €&quot;
)

*/

IF(
  UnitPrice = 0,
  &quot;&quot;,
  TEXT(ROUND(UnitPrice, 2) - MOD(ROUND(UnitPrice, 2),1)) &amp;
  &quot;,&quot; &amp;
  LPAD(TEXT(ROUND(MOD(ROUND(UnitPrice, 2),1) * 100,0)), 2, &quot;0&quot;) &amp;
  &quot; €&quot;
)</formula>
    <label>Unit Price / Blank if Zero</label>
    <type>Text</type>
</CustomField>